force-app/main/default/objects/Movie_Actor__c/Movie_Actor__c.object-meta.xml
<CustomObject>
    <label>Movie Actor</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movie Actors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>