force-app/main/default/objects/Movie_Actor__c/fields/actorId__c.field-meta.xml
<CustomField>
    <fullName>actorId__c</fullName>
    <label>actorId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>