force-app/main/default/objects/Movie_Actor__c/fields/Commentary__c.field-meta.xml
<CustomField>
    <fullName>Commentary__c</fullName>
    <label>Commentary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>