force-app/main/default/objects/Movie_Actor__c/fields/CreateData__c.field-meta.xml
<CustomField>
    <fullName>CreateData__c</fullName>
    <label>CreateData</label>
    <type>DateTime</type>
</CustomField>